--- a/web-build/manifest.json
+++ b/web-build/manifest.json
@@ -1,5 +1,5 @@
 {
-  "description": "",
+  "description": "Estou desenvolvendo um sistema de portaria para o Instituto Federal baseado no gerenciamento atual.",
   "display": "standalone",
   "lang": "en",
   "name": "Sistema de portaria IFPI",
